# opensesame-plugin-experiment_manager

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.py  stdeb.cfg
.github/workflows/: main.yml
debian/: changelog  control  rules
examples/: example_experiment_manager.osexp  test1.osexp  test2.osexp  test3.osexp
experiment_manager/: experiment_manager.md  experiment_manager.py  info.yaml
opensesame_plugins/experiment_manager/: __init__.py  experiment_manager.md  experiment_manager.py  info.yaml
opensesame_plugins/experiment_manager/experiment_manager/: __init__.py  experiment_manager.md  experiment_manager.py
