[tool.poetry]
name = "opensesame-plugin-experiment_manager"
version = "3.0.0"
description = "An OpenSesame Plug-in for managing/executing multiple OpenSesame experiments."
authors = ["Bob Rosbag <debian@bobrosbag.nl>"]
readme = "README.md"
packages = [
    {include = "opensesame_plugins"},
]
license = "LICENSE.md"
homepage = "https://github.com/dev-jam/opensesame-plugin-experiment_manager"
repository = "https://github.com/dev-jam/opensesame-plugin-experiment_manager"

[tool.poetry.dependencies]
python = ">= 3.7"
opensesame-core = ">= 4.0.0a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
